fix: Add top padding to earnings section to prevent navbar overlap

--- a/src/styles/MinSide.css
+++ b/src/styles/MinSide.css
@@ -255,6 +255,7 @@
   width: 100%;
   margin-right: 0;
   margin-top: 0;
+  padding-top: 2rem;
 }
 
 .earnings-box {
